--- a/app/views/bars/show.iphone.erb
+++ b/app/views/bars/show.iphone.erb
@@ -1,37 +1,39 @@
-<div data-role="header">
-	<a data-rel="back" data-icon="arrow-l">Back</a>
-  <h1><%= @bar.name %></h1>
-	<% unless user_signed_in? %>
-		<a data-icon="plus">Login</a>
-	<% else %>
-		<a data-icon="delete">Logout</a>
-	<% end %>
-</div>
-
-<div data-role="content">
-	<div data-role="collapsible">
-		<h3>Information</h3>
-			<dl>
-				<dt>Contact</dt>
-					<dd>
-						<%= @bar.address %><br />
-						<%= @bar.zip %><br />
-						<% if @bar.url.present? %>
-							<a href="#{@bar.url}">Website</a>
-						<% end %>
-					</dd>
-			</dl>
+<div data-role="page" id="bars_show" class="bars-page">
+	
+	<div data-role="header">
+		<a data-rel="back" data-icon="arrow-l">Back</a>
+	  <h1><%= @bar.name %></h1>
+		<%= render :partial => "layouts/login_or_logout" %>
 	</div>
 
-	<h3>Beers:</h3>
-	<ul data-role="listview" data-inset="true" data-theme="d" data-filter="true">
-		<% for beer_item in @beer_items %>
-		<li>
-			<%= link_to truncate(beer_item.beer.name, :length => 16), beer_item %>
-			<div class="ui-li-count">
-				<%= "#{number_to_human(beer_item.volume, :units => {:unit => beer_item.volunit})},  #{number_to_currency(beer_item.price)}" %>
-			</div>
-		</li>
-		<% end %>
-	</ul>
+	<div data-role="content">
+		<div data-role="collapsible">
+			<h3>Information</h3>
+				<dl>
+					<dt>Contact</dt>
+						<dd>
+							<%= @bar.address %><br />
+							<%= @bar.zip %><br />
+							<% if @bar.url.present? %>
+								<a href="#{@bar.url}">Website</a>
+							<% end %>
+						</dd>
+				</dl>
+		</div>
+
+		<h3>Beers:</h3>
+		<ul data-role="listview" data-inset="true" data-theme="d" data-filter="true">
+			<% for beer_item in @beer_items %>
+			<li>
+				<%= link_to truncate(beer_item.beer.name, :length => 16), beer_item %>
+				<div class="ui-li-count">
+					<%= "#{number_to_human(beer_item.volume, :units => {:unit => beer_item.volunit})},  #{number_to_currency(beer_item.price)}" %>
+				</div>
+			</li>
+			<% end %>
+		</ul>
+	</div>
+
+	<%= render :partial => "layouts/footer" %>
+
 </div>
