--- a/app/views/breweries/show.iphone.erb
+++ b/app/views/breweries/show.iphone.erb
@@ -1,9 +1,36 @@
-<h2>Brews</h2>
-	<ul class="rounded">
-		<% for beer in @beers %>
-			<li class="arrow">
-				<a class="button_beers_show" data-beer-id="<%= beer.id %>" data-beername="<%= beer.name %>"><%= beer.name %></a>
-				<small class="counter"><%= beer.beer_items.count %></small>
+<div data-role="page" id="breweries_index" class="breweries-page">
+
+	<div data-role="header">
+		<a data-rel="back" data-icon="arrow-l">Back</a>
+	  <h1><%= @brewery.name %></h1>
+		<%= render :partial => "layouts/login_or_logout" %>
+	</div>
+
+	<div data-role="content">
+		<div data-role="collapsible">
+			<h3>Information</h3>
+				<dl>
+					<dt>Contact</dt>
+						<dd>
+							<%= @brewery.address %><br />
+							<%= @brewery.zip %><br />
+							<% if @brewery.url.present? %>
+								<a href="#{@brewery.url}">Website</a>
+							<% end %>
+						</dd>
+				</dl>
+		</div>
+
+		<h3>Beers:</h3>
+		<ul data-role="listview" data-inset="true" data-theme="d" data-filter="true">
+			<% for beer in @beers %>
+			<li>
+				<%= link_to truncate(beer.name, :length => 16), beer %>
 			</li>
-		<% end %>
-	</ul>
+			<% end %>
+		</ul>
+	</div>
+	
+	<%= render :partial => "layouts/footer" %>
+	
+</div>
