--- a/app/views/layouts/application.iphone.erb
+++ b/app/views/layouts/application.iphone.erb
@@ -7,17 +7,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>Beer List</title>
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b3/jquery.mobile-1.0b3.min.css" />
+		<%= stylesheet_link_tag "jquery.mobile-1.0rc1pre.min.css", :cache => true %>
 		<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.0b3/jquery.mobile-1.0b3.min.js"></script>
+		<%= javascript_include_tag "jquery.mobile-1.0rc1pre.min.js", :cache => true %>
 		<%= javascript_include_tag "iphone.js"%>
 </head>
 <body>
-	<div data-role="page">
-		<%= yield %>
-		<div data-role="footer">
-			<%= render :partial => "layouts/footer" %>
-		<div>
-	</div>
+	<%= yield %>
 </body>
 </html>
