--- a/app/views/bars/new.iphone.erb
+++ b/app/views/bars/new.iphone.erb
@@ -1,8 +1,8 @@
-<div data-role="page" id="beer_items_new">
+<div data-role="page" id="bars_new">
 
 	<div data-role="header">
 		<a data-rel="back" data-icon="arrow-l">Back</a>
-		<h1>New Beer</h1>
+		<h1>New Bar</h1>
 		<%= render :partial => "layouts/login_or_logout" %>
 	</div>
 
