--- a/app/views/beers/edit.iphone.erb
+++ b/app/views/beers/edit.iphone.erb
@@ -2,7 +2,7 @@
 
 	<div data-role="header">
 		<a data-rel="back" data-icon="arrow-l">Back</a>
-		<h1>New Beer</h1>
+		<h1>Edit Beer</h1>
 		<%= render :partial => "layouts/login_or_logout" %>
 	</div>
 
