--- a/app/views/breweries/new.iphone.erb
+++ b/app/views/breweries/new.iphone.erb
@@ -1,8 +1,8 @@
-<div data-role="page" id="beer_items_new">
+<div data-role="page" id="breweries_new" class="breweries-page">
 
 	<div data-role="header">
 		<a data-rel="back" data-icon="arrow-l">Back</a>
-		<h1>New Beer</h1>
+	  <h1>Breweries</h1>
 		<%= render :partial => "layouts/login_or_logout" %>
 	</div>
 
@@ -10,6 +10,7 @@
 		<%= render 'form' %>
 	</div>
 	
-	<%= render :partial => "layouts/footer" %>
+	<%= render :partial => "/layouts/footer" %>
 
 </div>
+	
