--- a/app/views/beer_items/_form.iphone.erb
+++ b/app/views/beer_items/_form.iphone.erb
@@ -1,7 +1,7 @@
 <%= form_for(@beer_item) do |f| %>
   <% if @beer_item.errors.any? %>
     <div id="error_explanation">
-      <h2><%= error_messages_for @beer_item, :header_message => "Whoops!", :message => "Please address the following:"%></h2>
+      <p><%= error_messages_for @beer_item, :header_message => "Whoops!", :message => "Please address the following:"%></p>
     </div>
   <% end %>
 
@@ -18,9 +18,17 @@
   	<%= f.text_field :volume, :placeholder => "Volume" %>
 	</div>
 	<div data-role="fieldcontain">
-		<%= label_tag 'beer_item_volunit', 'Volume Units' %>
-		<%= select :beer_item, :volunit, options_for_select([["oz","oz"],["ml","ml"],["cl","cl"]],@beer_item.volunit)%>
-  </div>
+		<fieldset data-role="controlgroup" data-type="horizontal">
+			<legend>Volume Units</legend>
+			<!-- <%= select :beer_item, :volunit, options_for_select([["oz","oz"],["ml","ml"],["cl","cl"]],@beer_item.volunit)%> -->
+			<%= radio_button(:beer_item, :volunit, "oz") %>
+			<%= label_tag 'beer_item_volunit_oz', 'oz' %>
+			<%= radio_button(:beer_item, :volunit, "ml") %>
+			<%= label_tag 'beer_item_volunit_ml', 'ml' %>
+			<%= radio_button(:beer_item, :volunit, "cl") %>
+			<%= label_tag 'beer_item_volunit_cl', 'cl' %>
+		</fieldset>
+	</div>
 	<div data-role="fieldcontain">
 		<%= label_tag 'beer_item_pouring', 'Pouring' %>
 		<%= select "beer_item", "pouring", options_for_select([["draught","draught"],["bottle","bottle"],["can","can"],["pitcher", "pitcher"],["cask pour","cask pour"]], @beer_item.pouring) %>
@@ -29,6 +37,6 @@
 		<%= label_tag 'beer_item_price', 'Price' %>
 		<%= f.text_field :price, :palceholder => "Price" %>
 	</div>
-<%= f.submit %>
+	<%= f.submit %>
 
 <% end %>
