--- a/app/views/beers/index.iphone.erb
+++ b/app/views/beers/index.iphone.erb
@@ -16,7 +16,20 @@
 		</ul>
 	</div>
 
-	<%= render :partial => "layouts/footer" %>
+	<div data-role="footer" data-position="fixed">
+		<div data-role="navbar">
+			<ul>
+				<li><%= link_to "Home", beer_items_path, :id => "footer-home" %></li>
+				<li><%= link_to "Bars", bars_path, :id => "footer-bars" %></li>
+				<% if user_signed_in? %>
+					<li><%= link_to "New Beer", new_beer_path %></li>
+				<% else %>
+					<li><%= link_to "Beers", beers_path, :id => "footer-beers" %></li>
+				<% end %>
+				<li><%= link_to "Breweries", breweries_path, :id => "footer-breweries" %></li>
+			</ul>
+		</div>
+	</div>
 	
 </div>
 
