--- a/app/views/layouts/_footer.iphone.erb
+++ b/app/views/layouts/_footer.iphone.erb
@@ -1,6 +1,7 @@
 <div data-role="footer" data-position="fixed">
 	<div data-role="navbar">
 		<ul>
+			<li><%= link_to "Home", beer_items_path, :id => "footer-home" %></li>
 			<li><%= link_to "Bars", bars_path, :id => "footer-bars" %></li>
 			<li><%= link_to "Beers", beers_path, :id => "footer-beers" %></li>
 			<li><%= link_to "Breweries", breweries_path, :id => "footer-breweries" %></li>
