--- a/app/views/layouts/application.iphone.erb
+++ b/app/views/layouts/application.iphone.erb
@@ -9,8 +9,10 @@
     <title>Beer List</title>
 		<%= stylesheet_link_tag "jquery.mobile-1.0rc1pre.min.css", :cache => true %>
 		<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+		<%= javascript_include_tag "jquery.rails.js" %>
 		<%= javascript_include_tag "jquery.mobile-1.0rc1pre.min.js", :cache => true %>
 		<%= javascript_include_tag "iphone.js"%>
+		<%= csrf_meta_tag %>
 </head>
 <body>
 	<%= yield %>
