--- a/app/views/breweries/show.iphone.erb
+++ b/app/views/breweries/show.iphone.erb
@@ -7,7 +7,8 @@
 	</div>
 
 	<div data-role="content">
-		<div data-role="collapsible">
+		
+		<!-- <div data-role="collapsible">
 			<h3>Information</h3>
 				<dl>
 					<dt>Contact</dt>
@@ -19,7 +20,7 @@
 							<% end %>
 						</dd>
 				</dl>
-		</div>
+		</div> -->
 
 		<h3>Beers:</h3>
 		<ul data-role="listview" data-inset="true" data-theme="d" data-filter="true">
