--- a/app/views/beer_items/index.iphone.erb
+++ b/app/views/beer_items/index.iphone.erb
@@ -2,17 +2,23 @@
 
 	<div data-role="header">
 		<h1>ATL Beer List</h1>
-		<%= link_to "Signup", new_user_registration_path, :"data-transition" => "flip", :class => "ui-btn-left" %>
+		<% unless user_signed_in? %>
+			<%= link_to "Signup", new_user_registration_path, :"data-transition" => "flip", :class => "ui-btn-left" %>
+		<% end %>
 		<%= render :partial => "layouts/login_or_logout" %>
 	</div>
 
 	<div data-role="content">
-		<p>
-			Welcome to AtlBeerList.com!  Here you will find beer lists from bars across 
-			Atlanta, allowing you to check what's pouring before you get there and check
-			what's new.  Login or create an account by clicking the "Signup" button above to add 
-			and edit records to help others find deals too!
-		</p>
+		<% if user_signed_in? %>
+			<%= link_to "Add listing", new_beer_item_path, :"data-role" => "button" %>
+		<% else %>
+			<p>
+				Welcome to AtlBeerList.com!  Here you will find beer lists from bars across 
+				Atlanta, allowing you to check what's pouring before you get there and check
+				what's new.  Login or create an account by clicking the "Signup" button above to add 
+				and edit records to help others find deals too!
+			</p>
+		<% end %>
 
 		<h1>Best Deals</h1>
 			<ul data-role="listview" data-inset="true" data-theme="d">
