--- a/app/views/layouts/_doc_header.html.erb
+++ b/app/views/layouts/_doc_header.html.erb
@@ -1,14 +1,15 @@
 <head>
   <title>Atlanta Beer List</title>
 	<%= favicon_link_tag "abl_64x64.ico" %>
-  <%= stylesheet_link_tag "style.css", "jquery.jqplot.min.css", "ui-lightness/jquery-ui-1.8.15.custom.css", "jquery.qtip.min.css" %>
+  <%= stylesheet_link_tag "style.css", "jquery.qtip.min.css" %>
+	<!-- <%= stylesheet_link_tag "jquery.jqplot.min.css", "ui-lightness/jquery-ui-1.8.15.custom.css" %> -->
 	<!-- <%= javascript_include_tag :defaults %> -->
   <%= javascript_include_tag "jquery.min.js" %>
 	<%= javascript_include_tag "jquery.rails.js" %>
 	<%= javascript_include_tag "jquery.qtip.min.js" %>
   <%= javascript_include_tag "jquery-ui-1.8.16.custom.min.js" %>
-  <%= javascript_include_tag "jquery.jqplot.js" %>
-  <%= javascript_include_tag "jqplot_plugins/jqplot.dateAxisRenderer.min.js" %>
+  <!-- <%= javascript_include_tag "jquery.jqplot.js" %> -->
+  <!-- <%= javascript_include_tag "jqplot_plugins/jqplot.dateAxisRenderer.min.js" %> -->
   <%= javascript_include_tag "jquery.metadata.js" %>
 	<%= javascript_include_tag "gmaps4rails/gmaps4rails.base.js" %>
 	<%= javascript_include_tag "gmaps4rails/gmaps4rails.googlemaps.js" %>
