--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <div id="main">
     <% if iphone_user_agent? %>
       <div id="iphone-message">
-      Using an iPhone? <a href="http://iphone.atlbeerlist.com/">Use the optimized version</a>.
+      Using an mobile browser? <a href="http://m.atlbeerlist.com/">Use the optimized version of the site</a>.
       </div>
     <% end %>
 
