corrected an error that occured if user tried to view beer_items/index while there were no records in the database

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,11 +11,11 @@
 
   <div class="field">
 	<%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <%= f.password_field :password, :id => "user_password" %></div>
 
   <div class="field">
 	<%= f.label "confirm Password" %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <%= f.password_field :password_confirmation, :id => "user_confirm_password" %></div>
 
   <div class="actions">
 	<%= f.submit "Sign up" %></div>
