--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -37,12 +37,12 @@
 
 
 
-<% if @bar.description.present? %>
+<!-- <% if @bar.description.present? %>
 	<p>
 		<b>Description:</b>
 		<%= @bar.description %>
 	</p>
-<% end %>
+<% end %> -->
 
 <!--  <%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@bar.latitude}%2C#{@bar.longitude}" %>
 -->
