--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -36,7 +36,8 @@
     <th width=100><%= sortable "price", "Price" %> <span class="asc"></span></th>
     <th width=150><%= sortable "volume", "Pouring" %> <span class="asc"></span></th>
 	  <th width=100 class="abd-table-heading"><%= sortable "abd", "ABD (oz)" %> <span class="asc"></span></th>
-    <th></th>
+		<th></th>    
+		<th></th>
     <th></th>
   </tr>
 </thead>
@@ -68,9 +69,10 @@
 		<td><%= sprintf("%.3f",item.abd) %></td>
 
 	
-   <% if item.bar.has_permission?(current_user) %>
-    <td><%= link_to 'Edit', edit_beer_item_path(item) %></td>
-    <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
+   <% if user_signed_in? %>
+		<td><%= link_to 'Details', item, :class => "action_link" %></td>
+    <td><%= link_to 'Edit', edit_beer_item_path(item), :class => "action_link" %></td>
+    <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete, :class => "action_link" %></td>
    <% else %>
     <td />
     <td />
