removed advanced searching from beer_items/index since it doesn't really do anything useful

--- a/app/views/beer_items/index.html.erb
+++ b/app/views/beer_items/index.html.erb
@@ -14,7 +14,7 @@
 <div id="best-deals-table-wrapper">
 	<h2>Top 20 Best Deals</h2>
 
-	<%= render 'advanced_search' %>
+	<!-- render 'advanced_search' -->
 	<br />
 	<div id="best_deals">
 		<%= render "best_deals" %>
