fixed: pagination doesn't update when searching bars/index, beers/index, breweries/index

--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -42,4 +42,6 @@
 
 <%= link_to 'New Bar', new_bar_path %>
 <br>
-<%= paginate @bars %>
+<div id="bar-pagination">
+	<%= render 'pagination' %>
+</div>
