--- a/app/views/bars/index.js.erb
+++ b/app/views/bars/index.js.erb
@@ -1,3 +1,4 @@
 $("#bar_list").html("<%= escape_javascript(render('list')) %>");
+$("#bar-pagination").html("<%= escape_javascript(render('pagination')) %>");
 $("#found_count").html("Found <%= escape_javascript(pluralize(@bars.count, 'bar')) %>");
 $(".search_results_found").show();
