--- a/app/views/bars/index.js.erb
+++ b/app/views/bars/index.js.erb
@@ -1,4 +1,5 @@
-$("#bar_list").html("<%= escape_javascript(render('list')) %>");
+$("#bar_list").html("<%= escape_javascript(render :partial => 'list_of_bars', :locals => { :bars => @bars }) %>");
+Application.format_expandable_itemlist('.expandable_itemlist')
 $("#bar-pagination").html("<%= escape_javascript(render('pagination')) %>");
-$("#found_count").html("Found <%= escape_javascript(pluralize(@bars.count, 'bar')) %>");
+$("p#found_count").html("Found <%= escape_javascript(pluralize(@bars.count, 'bar')) %>");
 $(".search_results_found").show();
