removed ajax pagination since it caused problems.  pagination should work with searching now

--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -49,5 +49,5 @@
 <%= link_to 'New Bar', new_bar_path %>
 <br>
 <div id="bar-pagination">
-	<%= paginate @bars, :remote => true %>
+	<%= paginate @bars %>
 </div>
