--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -23,7 +23,7 @@
 <div align="left"><%= link_to 'Add Brewery', new_brewery_path %></div>
 <br>
 <div id="brewery-pagination">
-	<%= paginate @breweries, :remote => true %>
+	<%= paginate @breweries %>
 </div>
 
 
