--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -21,5 +21,5 @@
 
 <%= link_to 'New Beer', new_beer_path %><br>
 <div id="beer-pagination">
-	<%= paginate @beers %>
+	<%= paginate @beers, :remote => true %>
 </div>
