--- a/app/views/beers/index.js.erb
+++ b/app/views/beers/index.js.erb
@@ -1,5 +1,8 @@
 $("#beer_list_index").html("<%= escape_javascript(render('beers_list')) %>");
 $('.itemlist tbody tr:nth-child(odd)').addClass('zebra');
-$("#beer-pagination").html('<%= escape_javascript(paginate(@beers).to_s) %>');
-$("#found_count").html("Found <%= escape_javascript(pluralize(@beers.count, 'beer')) %>");
-$(".search_results_found").show();
+$("#beer-pagination").html('<%= escape_javascript(paginate(@beers, :remote => true).to_s) %>')
+
+<% if params[:search].present? %>
+	$("#found_count").html("Found <%= escape_javascript(pluralize(@beers.count, 'beer')) %>");
+	$(".search_results_found").show();
+<% end %>
