--- a/app/views/layouts/_userbar.html.erb
+++ b/app/views/layouts/_userbar.html.erb
@@ -1,13 +1,13 @@
 <div id="user_bar">
  <ul>
-<li><%= link_to "Home", root_url %></li>
-<li>-</li>
-<li><%= link_to "Beers", beers_path %></li>
-<li>-</li>
-<li><%= link_to "Bars", bars_path %></li>
-<li>-</li>
-<li><%= link_to "Breweries", breweries_path %></li>
-<li>|</li>
+	<li><%= link_to "Home", root_url %></li>
+	<li>-</li>
+	<li><%= link_to "Beers", beers_path %></li>
+	<li>-</li>
+	<li><%= link_to "Bars", bars_path %></li>
+	<li>-</li>
+	<li><%= link_to "Breweries", breweries_path %></li>
+	<li>|</li>
   <% if user_signed_in? %>	
    	<% unless current_user.admin_bars.empty? %>      
 			<li><%= link_to "Manage Bars", bar_owner_path %></li>
@@ -20,4 +20,12 @@
     <li><%= link_to "Login", new_user_session_path %></li>
   <% end %>
  </ul>
+	<div id="site-search-bar">
+		<%= form_tag search_results_path, :method => :get do %>
+		  <p>
+		    <%= text_field_tag :q, params[:q], :size => 20, :placeholder => "Search the site...", :id => "site_search_box" %>
+		    <%= submit_tag "Search", :name => nil, :class => "submit-search-button" %>
+			</p>
+		<% end %>
+	</div>
 </div>
