added notice if invalid query

--- a/app/views/search_results/index.html.erb
+++ b/app/views/search_results/index.html.erb
@@ -1,12 +1,17 @@
-<h1>Search Results</h1>
+<h1><%= pluralize(@results.count, "Result") %> found</h1>
 
-<table>
+<div class="itemlist">
+<table id="search-results">
 	<tbody>
 	<% @results.each do |r| %>
 		<tr>
-			<td><%= r.class %></td>
-			<td><%= link_to r.name, r %></td>
+			<td><%= link_to r.name, r %> (<%= r.class %>)</td>
 		</tr>
 	<% end %>
 	</tbody>
 </table>
+</div>
+
+<div id="search-results-pagination">
+	<%= paginate @results, :remote => true %>
+</div>
