finished desktop version of beer_items view

--- a/app/views/beer_items/index.html.slim
+++ b/app/views/beer_items/index.html.slim
@@ -13,4 +13,4 @@ div id="best-deals-table-wrapper"
 	h2 Top 20 Best Deals
 	br
 	div id="best_deals"
-		= render partial="best_deals"
+		== render partial="best_deals"
