added indextank logo to the footer to appease the gods

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -10,6 +10,9 @@ div id="footer"
         | &#64; 2011, Greggory Rothmeier
   br
   div id="social"
+    a href="http://indextank.com/?utm_campaign=poweredby" name="Powered-by Indextank" rel="friend" class="no_hover_background"
+      img src="http://indextank.com/_static/images/poweredby/idt-badge-sm.png" alt="IndexTank: hosted search you control"
+    br
     = link_to image_tag("facebook-icon.jpg", :height => "22px", :width => "22px"), "http://www.facebook.com/pages/AtlBeerListcom/106072122833011", :class => "no_hover_background", :target => "_blank"
     a href="http://www.twitter.com/atlbeerlist" class="no_hover_background" target="_blank"
       img src="http://twitter-badges.s3.amazonaws.com/t_small-a.png" alt="Follow atlbeerlist on Twitter"
