--- a/app/views/beer_items/index.html.slim
+++ b/app/views/beer_items/index.html.slim
@@ -7,7 +7,7 @@ div id="main-page-intro-text"
 		strong Want to help?
 		|	Have a bar you wish was listed?  Every user has the power to add and edit listings, however we understand that this may be more work than you're willing to undertake.  You can also help by #{{mail_to "admin@atlbeerlist.com", "sending me a website, pdf, or even a picture of a bars menu", :subject => "Bar Menu!!"}}.  Thank you!!
 	p
-		Bars are constantly being added, so check back if you don&#146;t see what you&#146;re looking for.  If you&#146;d like to hear about our updates, #{{link_to "follow us on twitter", "http://twitter.com/#!/atlbeerlist", :target => "_blank"}}.
+		| Bars are constantly being added, so check back if you don&#146;t see what you&#146;re looking for.  If you&#146;d like to hear about our updates, #{{link_to "follow us on twitter", "http://twitter.com/#!/atlbeerlist", :target => "_blank"}}.
 
 div id="best-deals-table-wrapper"
 	h2 Top 20 Best Deals
