--- a/app/views/bars/show.html.slim
+++ b/app/views/bars/show.html.slim
@@ -30,12 +30,7 @@ div
       = select_tag "sort_by_pouring", options_for_select([["All","all"],["draught","draught"],["bottle","bottle"],["can","can"],["pitcher", "pitcher"],["cask pour","cask pour"]],params[:sort_by_pouring]), :class => "searchable_option", :id => "pouring-select", :onchange => "this.form.submit();"
 
 div id="beer_item_list" class="itemlist"
-  - unless @recent_beer_items.empty?
-    h2  Added in the last week
-    = render :partial => "items_list", :locals => { :items => @recent_beer_items }
-    br
-  h2  All Beers
-  = render :partial => "items_list", :locals => { :items => @beer_items }
+  = render "beers"
 
 br
 div
