--- a/app/views/bars/_items_list.html.slim
+++ b/app/views/bars/_items_list.html.slim
@@ -25,7 +25,7 @@ table id="sorted_beer_item_list"
       tr	
         td
           div id="beer_tracker_form_#{item.id}"
-            = render :partial => "track_it", :locals => { :item => item }
+            = render :partial => "bars/track_it", :locals => { :item => item }
         td = link_to item.beer.name, item.beer
         td = number_to_percentage item.beer.abv, :precision => 1
         - unless (item.volume.nil? || item.pouring.nil?)
