--- a/app/views/bars/_track_it.html.slim
+++ b/app/views/bars/_track_it.html.slim
@@ -1,12 +1,17 @@
 - if user_signed_in?
   - if current_user.has_drunk?(item.beer)
-    = form_for current_user.beer_tracks.find_by_beer_id(item.beer.id), :html => { :method => :delete }, :remote => true do |h|
+    = form_for current_user.beer_tracks.find_by_beer_id(item.beer.id), :html => { :method => :delete, :id => "beer_tracks_#{item.id}" }, :remote => true do |h|
       div class="beer_tracking"
-        = image_submit_tag "full_circle.png"
+        = h.hidden_field :bar_id
+        = hidden_field_tag "beer_item_id", item.id
+        = check_box_tag "beer_tracking", "remove", true, :onclick => "$('#beer_tracks_#{item.id}').submit();"
+        / = image_submit_tag "full_circle.png"
   - else
-    = form_for current_user.beer_tracks.build(:beer_id => item.beer.id, :bar_id => item.bar.id), :remote => true do |g|
+    = form_for current_user.beer_tracks.build(:beer_id => item.beer.id, :bar_id => item.bar.id), :html => { :id => "beer_tracks_#{item.id}" }, :remote => true do |g|
       div
         = g.hidden_field :bar_id
         = g.hidden_field :beer_id
+        = hidden_field_tag "beer_item_id", item.beer.id
         div class="beer_tracking"
-          = image_submit_tag "empty_circle.png"
+          / = image_submit_tag "empty_circle.png"
+          = check_box_tag "beer_tracking", "add", false, :onclick => "$('#beer_tracks_#{item.id}').submit();"
