added ability to rate beers

--- a/app/views/beers/edit.html.slim
+++ b/app/views/beers/edit.html.slim
@@ -3,4 +3,4 @@ h1  Editing Beer
 = render 'form'
 
 div
-  #{link_to 'Show', @beer %>}  |  #{link_to 'Back', beers_path}
+  #{link_to 'Show', @beer}  |  #{link_to 'Back', beers_path}
