--- a/app/views/bars/_form.html.slim
+++ b/app/views/bars/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for(@bar) do |f|
+= form_for(@bar, :html => { :class => "bigform" }) do |f|
   - if @bar.errors.any?
     div id="error_explanation"
       h2 = error_messages_for @bar, :header_message => "Whoops!", :message => "Please address the following:"
