--- a/app/views/beer_items/_form.html.slim
+++ b/app/views/beer_items/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for(@beer_item) do |f|
+= form_for(@beer_item, :html => { :class => "bigform" }) do |f|
   - if @beer_item.errors.any?
     div id="error_explanation"
       h2	= error_messages_for @beer_item, :header_message => "Whoops!", :message => "Please address the following:"
